Bug #11596 ndb_mgm doesn't show IP of connected nodes
Submitted: 27 Jun 2005 23:13 Modified: 28 Jul 2005 0:58
Reporter: Jan Kneschke
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.12 OS:Linux (linux/x86)
Assigned to: Tomas Ulin Target Version:

[27 Jun 2005 23:13] Jan Kneschke
Description:
If you have 2 mgmds and you switch over to the second mgmd you can't see the IP addresses
of the any cluster node.

How to repeat:
setup a cluster with 2 mgmds and stop the first mgmd and login to the second mgmd. No IP
addresses are shown.

Suggested fix:
show IP addresses of cluster nodes in SHOW output
[13 Jul 2005 14:14] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/26990
[15 Jul 2005 10:52] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/27137
[15 Jul 2005 11:37] Tomas Ulin
pushed into 4.1.13 (and will go into 5.1.10)
[15 Jul 2005 11:38] Tomas Ulin
meant 5.0.10
[28 Jul 2005 0:58] Mike Hillyer
Documented in 4.1.13 and 5.0.10 changelogs:

<listitem><para>IP addresses not shown in <literal>ndb_mgm SHOW</literal> command on
second ndb_mgmd (or on ndb_mgmd restart). (Bug #11596)</para></listitem>
[13 Sep 2005 16:49] Tomas Ulin
Clarification:

partial fix has been made, IP addresses not shown in ndb_mgm SHOW command on second
ndb_mgmd (or on ndb_mgmd restart)
  
  This patch fixes it for the ndbd nodes.  The mysqld/api nodes will still not have the
IP-address shown.