ndb/src/common/transporter/Transporter.cpp
@@ -74,6 +74,7 @@ Transporter::Transporter(TransporterRegistry &t_reg,
   m_connected     = false;
   m_timeOutMillis = 1000;
 
+  m_connect_address.s_addr= 0;
   if (isServer)
     m_socket_client= 0;
   else
@@ -98,6 +99,13 @@ Transporter::connect_server(NDB_SOCKET_TYPE sockfd) {
     DBUG_RETURN(true); // TODO assert(0);
   }
   
+  {
+    struct sockaddr addr;
+    SOCKET_SIZE_TYPE addrlen= sizeof(addr);
+    int r= getpeername(sockfd, &addr, &addrlen);
+    m_connect_address= ((struct sockaddr_in *)&addr)->sin_addr;
+  }
+
   bool res = connect_server_impl(sockfd);
   if(res){
     m_connected  = true;
@@ -162,6 +170,13 @@ Transporter::connect_client() {
   else if (m_type == tt_SHM_TRANSPORTER)
   {
     g_eventLogger.warning("Unable to verify transporter compatability with node %d", nodeId);
+  }
+
+  {
+    struct sockaddr addr;
+    SOCKET_SIZE_TYPE addrlen= sizeof(addr);
+    int r= getpeername(sockfd, &addr, &addrlen);
+    m_connect_address= ((struct sockaddr_in *)&addr)->sin_addr;
   }
 
   bool res = connect_client_impl(sockfd);
